--- a/public/jade/index.jade
+++ b/public/jade/index.jade
@@ -1,3 +1,11 @@
 extends layout
 block content
-  div#content lalala
+  .container
+    h1.title 洗车啦
+    .section
+      h2 手机 #{phone}
+      .cars
+        ul
+        .add
+          i.icon-add
+          | 添加车辆
