--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -1,8 +1,11 @@
 body,h1,h2,input,div,p,ul,ol,li
   padding: 0
   margin: 0
+  font-family: 'Hiragino Sans GB', sans-serif
+  font-weight: normal
 
 body
+  color: #fff
   background-color: #f29206
 
 .container
@@ -32,3 +35,32 @@ body
     margin-bottom:15px
   .button
     display: block
+
+#home
+  background-color: rgb(250,174,69)
+  .title
+    padding-top:10px
+    height: 40px
+    line-height: 40px
+    text-align: center
+    font-size: 20px
+  .section
+    margin-bottom: 40px
+    h2
+      padding: 15px 0
+      text-align: center
+      font-size: 16px
+    .cars .add
+      background-color: #FFF
+      text-align: center
+      height: 40px
+      line-height: 40px
+      color: rgb(218, 221, 80)
+      .icon-add
+        display: inline-block
+        background-image: url(./img/add.png)
+        width: 18px
+        height: 18px
+        margin-right: 10px
+        position: relative
+        top: 2px
