添加车辆界面 #4

--- a/public/jade/index.jade
+++ b/public/jade/index.jade
@@ -9,3 +9,7 @@ block content
         .add
           i.icon-add
           | 添加车辆
+  script.
+    facade({
+      entry: "ccmeiche/pages/home.js"
+    });
