--- a/public/jade/login.jade
+++ b/public/jade/login.jade
@@ -1,6 +1,6 @@
 extends layout
 block content
-  div.container#login
+  div.container
     .row
       input.input(type="tel",name="phone",id="phone",placeholder="手机号",maxlength="11")
       input.button(type="button",id="getvcode",value="发送验证码",disabled)
