添加车辆界面更新 #4

--- a/public/pages/tpl/addcar.jade
+++ b/public/pages/tpl/addcar.jade
@@ -7,8 +7,17 @@
       .desc 含号牌的车辆照片
     .camera
       img(src="/img/upload.png")
-  input.input.type(placeholder="车型")
-  input.input.number(placeholder="号牌")
-  input.input.color(placeholder="颜色")
-  input.input.comment(placeholder="备注")
-  input.button(type="button",value="提交")
+  .row.type
+    input.input(placeholder="车型",data-pattern="/api/v1/cartypes?q={q}")
+    i.icon
+  .row.number
+    input.input.number(placeholder="号牌")
+    i.icon
+  .row.color
+    input.input(placeholder="颜色")
+    i.icon
+  .row.comment
+    input.input(placeholder="备注")
+    i.icon
+  .row
+    input.button(type="button",value="提交")
