--- a/public/jade/index.jade
+++ b/public/jade/index.jade
@@ -4,11 +4,38 @@ block content
     h1.title 洗车啦
     .section
       h2 手机 #{phone}
+    .section
       .cars
         ul
         .add
           i.icon-add
           | 添加车辆
+    .section
+      h2 请选择您需要的服务
+      ul
+        li
+          .detail
+            .title 初级洗车服务
+            .desc 洗车洗车洗车洗车
+          .price ￥000
+          .promo 优惠券
+    .section
+      .credit 您的积分
+      .use-credit 使用积分
+    .section
+      .count
+        .title 支付金额
+        .num ￥0000
+    .section
+      h2 地址
+      input#latlng(type="hidden")
+      .address
+        input.input
+        i.icon
+      .carpark
+        input.input(placeholder="具体位置 如B215车位")
+    .section
+      .button 欧耶洗车啦
   script.
     facade({
       entry: "ccmeiche/pages/home.js"
