--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -63,6 +63,8 @@ body
       text-align: center
       font-size: 16px
     .cars
+      .active
+        background-color: #c70462
       li
         clearfix()
         background-color: #fff
