--- a/public/jade/login.jade
+++ b/public/jade/login.jade
@@ -9,6 +9,8 @@ block content
     .row
       input.button(type="button",id="go",value="确认",disabled)
   script.
+    var access_token = '#{access_token}';
+    var openid = '#{openid}';
     facade({
       entry:"ccmeiche/pages/login.js"
     });
