--- a/public/pages/tpl/addcar.jade
+++ b/public/pages/tpl/addcar.jade
@@ -20,4 +20,5 @@
     input.input(placeholder="备注")
     i.icon
   .row
-    input.button(type="button",value="提交")
+    input.button.submit(type="button",value="提交")
+    input.button.cancel(type="button",value="取消")
