--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -9,7 +9,7 @@ li
 
 body
   color: #fff
-  background-color: #f29206
+  background-color: #faae45
   &.openmenu
     position: fixed
     width: 100%
@@ -109,7 +109,6 @@ body
     margin-bottom:15px
 
 #home
-  background-color: rgb(250,174,69)
   >.container>.title
     padding-top:10px
     height: 40px
@@ -343,3 +342,65 @@ body
     .text
       font-size: 10px
       text-align: center
+
+#myorders
+  .h1
+    font-size: 20px
+    text-align: center
+    margin: 50px auto 10px auto
+  .section
+    margin: 0 30px
+    font-size: 14px
+    text-align: center
+    background-color: #fff
+    color: #b5b6b6
+    .h2
+      font-size: 14px
+      line-height: 40px
+      color: #fff
+      background-color: rgb(202,202,202)
+    li
+      padding: 15px 0
+      clearfix()
+    .details
+      float: left
+    .control
+      float: right
+      padding: 0 30px
+      margin: 25px auto 0 auto
+      .text
+        font-size: 12px
+      .time
+        color: #f8b62b
+        font-size: 18px
+      .cancel
+        height: 14px;
+        font-size: 12px;
+        line-height: 15px;
+        width: 50px;
+        text-align: center;
+        margin: 5px auto;
+        color: #fff;
+        background-color: rgb(250,180,74);
+        padding: 3px;
+      .view-result
+        color: #fff
+        padding: 5px
+        background-color: rgb(203,0,96)
+    &.done .h2
+      background-color: rgb(217,221,74)
+    .empty
+      padding: 10px
+    .row
+      clearfix()
+      font-size: 12px
+      .label
+        width: 50px
+        float: left
+        line-height: 2
+        text-align: right
+      .text
+        float: left
+        width: 80px
+        text-align: left
+        line-height: 2
