--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -373,6 +373,7 @@ body
       .time
         color: #f8b62b
         font-size: 18px
+        height: 27px
       .cancel
         height: 14px;
         font-size: 12px;
