充值页样式

--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -1,6 +1,7 @@
 orange=#f8b62b
 grey=#b6b6b6
 light-grey=#ddd
+pink=#c70462
 
 body,h1,h2,input,div,p,ul,ol,li
   padding: 0
@@ -143,7 +144,7 @@ body
     .cars
       .active
         color: #fff
-        background-color: #c70462
+        background-color: pink
       li
         clearfix()
         background-color: #fff
@@ -168,7 +169,7 @@ body
   .services
     .active
       color: #fff
-      background-color: #c70462
+      background-color: pink
     li
       clearfix()
       margin-bottom: 1px
@@ -451,3 +452,24 @@ body
             margin-bottom: 3px
           .number
             font-size: 12px
+
+#recharge
+  .h1
+    font-size: 20px
+    text-align: center
+    margin: 50px auto 10px auto
+  .choices
+    margin: 0 30px 30px 30px
+    .row
+      text-align: center
+      color: grey
+      margin-bottom: 1px
+      background-color: #fff
+      padding: 10px 0
+      &.active
+        color: #fff
+        background-color: pink
+      .price
+        font-size: 16px
+      .promo
+        font-size: 12px
