--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -452,6 +452,13 @@ body
             margin-bottom: 3px
           .number
             font-size: 12px
+    .promos
+      li:first-child
+        border-top: 1px solid orange
+      li
+        padding: 5px
+        border-bottom: 1px solid orange
+        color: grey
 
 #recharge
   .h1
