--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -381,6 +381,7 @@ body
         color: orange
         font-size: 18px
         height: 27px
+        max-width: 70px
       .cancel
         height: 14px
         font-size: 12px
