--- a/public/jade/myorders.jade
+++ b/public/jade/myorders.jade
@@ -48,5 +48,5 @@ block content
 
   script.
     facade({
-      entry: "ccmeiche/pages/myinfos.js"
+      entry: "ccmeiche/pages/myorders.js"
     });
