--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -1,4 +1,4 @@
-orange=#f8b62b
+orange=#fab44a
 grey=#b6b6b6
 light-grey=#ddd
 pink=#c70462
@@ -328,7 +328,7 @@ body
     background-color: #fff
     color: #b6b6b6
     .inner
-      border:2px solid rgb(247,159,60)
+      border:2px solid orange
       padding: 14px
       .row
         clearfix()
@@ -460,6 +460,44 @@ body
         padding: 5px
         border-bottom: 1px solid orange
         color: grey
+
+#order
+  background-color: #fff
+  .pic
+    margin: 20px 30px
+    padding: 5px
+    img
+      width: 100%
+      margin: 0 auto
+  .order
+    padding: 2px
+    background-color: orange
+    color: #fff
+    margin: 0 30px
+    .inner
+      border:2px solid #fff
+      padding: 14px
+      .row
+        clearfix()
+        .label
+          text-align: right
+          line-height: 23px
+          width: 60px
+          float: left
+        .text
+          width: 120px
+          line-height: 23px
+          float: left
+  .remain
+    color: orange
+    text-align: center
+    margin: 35px 30px 50px 30px
+    .head
+      font-size: 18px
+    .time
+      font-size: 32px
+    .message
+      font-size: 10px
 
 #recharge
   .h1
